(Format: Year/Month/Day)
Changes for 0.9.11
*04/10/04:
  * Fix handling of setlocale return (Thanks Victor Yegorov)
    FbTk/XmbFontImp.cc
*04/09/30:
  * Fix to show title of current tabbed-window as the label of the 
    iconbar-button-group (Mathias)
    Window.cc
  * Fixed typo nls/pl_PL/Translation.m (Mathias)
*04/09/29:
  * Fix to make menuseparators not selectable (Mathias)
    FbTk/Menu.cc
  * Fix bug #1026929 (Mathias)
    util/fbrun/FbRun.cc
*04/09/19:
  * Fix a tiny bug that leads to high cpuload under some circumstances (Mathias)
    FbTk/Timer.cc
*04/09/16:
  * Fix restart command not reading its args (Simon)
    MenuCreator.cc
*04/09/12:
  * Preliminary support for Composite extension (Simon)
    - Relies on external compositing manager using _NET_WM_WINDOW_OPACITY
    - NOTE: Also make alpha resource setting more consistent. 
      Alpha values are no longer in theme, but are in init file. Possible
      values are (all beginning with session.screenN.), * means changed/new:
        -  menu.alpha (*)
        -  slit.alpha 
        -  window.focus.alpha (*)
        -  window.unfocus.alpha (*)
        -  toolbar.alpha (*)
    - Changed menu around a bit. If you don't have/want a compositing 
      manager, but Composite is enabled, you can override it by setting
        session.forcePseudoTransparency: true 
    - Fix a couple of bugs with transparency in toolbar/buttons
   fluxbox.hh/cc Screen.hh/cc FbWinFrame.hh/cc FbWinFrameTheme.hh/cc 
    Slit.hh/cc Toolbar.hh/cc ToolbarTheme.hh/cc ToolbarItem.hh 
    ToolFactory.cc *Tool.hh/cc ArrowButton.cc FbTk/FbWindow.hh/cc 
    FbTk/Transparent.hh/cc FbTk/Menu.cc
  * Minor cleaning, moved Resource<> from fluxbox.cc to Resources.cc (Henrik)
*04/09/11:
  * The include directive in menu can now take
    a director as argument [include] (path)
    It will include each file in the path into the menu
    (Thanks Ciaran McCreesh)
    MenuCreator.cc
  * Fix for backup of empty or non existing menu 