@@ -1,6 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.11
 *04/10/04:
+  * Don't require [begin] tag for included menu files (Simon)
+    MenuCreator.hh/cc Screen.cc Window.cc
   * Fix handling of setlocale return (Thanks Victor Yegorov)
     FbTk/XmbFontImp.cc
 *04/09/30:
